# glStart

./: .gitignore  CMakeLists.txt  Mesh.h  Model.h  README.md  Shader.h  frag.glsl  main.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  main6.cpp  main7.cpp  main8.cpp  mainA.cpp
cube/: frag.glsl
light/: frag.glsl
